Fixed bug with Foundation block-grid misalignment during dynamic item reordering (using MitItUp).

--- a/src/styles/imports/global.less
+++ b/src/styles/imports/global.less
@@ -15,3 +15,8 @@ h2 {
     padding-bottom: 10px;
     text-align: center;
 }
+
+// Clearfix for Foundation block-grids
+ul[class*="block-grid"] > li {
+     clear: none !important;
+}
